--- a/_titlepage.tex
+++ b/_titlepage.tex
@@ -52,9 +52,9 @@
 	% wenn man Lust auf ein Zitat hat...
 	% ... ansonsten auskommentieren
 	~\\ \vfill \noindent 
-	A distributed system is one where the failure of some \\
-	computer I've never heard of can keep me from getting my work done. \\
-	\textit{-- Leslie Lamport}
+	The question of whether a computer can think is no more \\
+	interesting than the question of whether a submarine can swim. \\
+	\textit{-- Edsger Dijkstra}
 	% Possible cites:
 	% “We should be careful to get out of an experience
 	% only the wisdom that is in it-and stop there; lest we be like the cat that sits
