--- a/abstract.tex
+++ b/abstract.tex
@@ -1,2 +1,3 @@
 \chapter*{Abstract}
-Many science-based applications need continuous or gridded input data in order to work properly. This paper investigates how single data-points can be combined to create a continuous data layer, in which missing data points are interpolated. An example for such an application would be the prediction of temperatures coming from single sensors and weather-stations, that can be combined to detect \gls{uhi}s. \gls{uhi}s are weather phenomena that get ampflified among other things by the ongoing densification of urban areas to create more living space, typically accompanied by the removal of green areas that can help with the dissipation of heat. These heat islands, in which the temperature is significantly higher than in surrounding areas, pose a threat to the health of the urban population, especially to the elderly, children and people with existing health conditions. Traditionally, \gls{uhi}s are detected using \gls{lst} captured by satellites, that usually have the downside of low spatial and temporal density. This paper proposes an alternative approach by creating a machine-learning model that is able to interpolate missing data between data-points coming from citizen-owned sensor networks that are combined with mobile sensors, which can be attached to rental bikes, buses or e-scooters, to gain temporary insights into otherwise unobserved areas. The model combines data streams of sensor readings with historic data and creates a fine-granular continuous data-layer, in this case for temperature, which allows for an accurate localization of \gls{uhi}s.
+In 2023 56\% of the human population already lives in urban areas with the number projected to continiously increase to 68\% by 2050. Combined with the ongoing climate change and urban densification due to the need for more and more living space, cities are facing many new challenges. With the removal of vegetation in favor of living space and the sealing of surfaces with heat-absorbing materials such as asphalt or concrete for streets and highways, rising temperatures lead to new phenomena that pose risks for the urban citizens. One especially critical phenomenon is the urban heat-island (UHI).\\
+In order to detect and understand UHI formation, one must measure the urban climate of a city in a very detailed way, which current official meterological monitoring networks with less than one weather station per city are not capable of. In this work, we explore how machine-learning based interpolation can be used in urban air temperature sensing applications to leverage new possibilities of private-owned weather station and sensor networks to interpolate air temperature either for specific locations, augmenting times when sensors might be offline, or non-stationary sensors moving through a city, as well as areal interpolation to predict air temperature between sensors. We show that for interpolating a single sensor, Histogram-based Gradient Boosting is a powerful ML approach that achives a RMSE between 0.4 and 0.5 for sensors from Netatmo and Sensor.Community in Hamburg and Stuttgart, and that other features other than air temperature of surrounding neighbours have little to no influence on the model. Areal interpolation on the other hand seems more challenging and performs much worse with an RMSE between 3 to 4, suggesting that there is more improvement potential in this area.
