--- a/appendix_general.tex
+++ b/appendix_general.tex
@@ -28,7 +28,7 @@ n_iter_no_change=10, tol=1e-07, verbose=0, random_state=42)
 
 The number of max iterations was increased from the default value of 100 to 200 to improve the performance of the model and the random state was set to 42 so all interations yield the same result.
 
-\subsection{Histogram-based Gradient Boosting Single Location Interpolation}
+\section{Histogram-based Gradient Boosting Single Location Interpolation}
 
 \subsubsection{List of stations for minimum distance between stations}
 \label{appendix stations for minimum distance between stations}
