--- a/references.bib
+++ b/references.bib
@@ -673,6 +673,16 @@
   publisher={Springer}
 }
 
+United Nations, Department of Economic and Social Affairs, Population Division (2019). World Urbanization
+Prospects: The 2018 Revision (ST/ESA/SER.A/420). New York: United Nations
+
+@misc{who2018projections,
+  title={World Urbanization Prospects: The 2018 Revision},
+  author={United Nations, Department of Economic and Social Affairs, Population Division},
+  year={2019},
+  howpublished={\url{https://population.un.org/wup/publications/Files/WUP2018-Report.pdf}}
+}
+
 @article{rundel2009environmental,
   title={Environmental sensor networks in ecological research},
   author={Rundel, Philip W and Graham, Eric A and Allen, Michael F and Fisher, Jason C and Harmon, Thomas C},
